--- a/greatwall/css/style.css
+++ b/greatwall/css/style.css
@@ -10,7 +10,7 @@ body{
 }
 /*header*/
 .header {
-    height: 128px;
+    height: 64px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -48,15 +48,10 @@ body{
     justify-content: center;
     overflow: hidden;
     align-items: center;
+    background-color: black;
 }
-.landing::before{
-    content: '';
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background-color: rgb(255, 255, 255 , 0.25);
+.landing div div {
+    user-select: none;
 }
 .landing .container {
     display: flex;
@@ -97,11 +92,13 @@ body{
     align-items: center;
     justify-content: center;
     animation: rotate 20s 3s linear infinite forwards , paddingdec 1.5s forwards;
-    border: 5px solid black;
+    border: 10px double black;
     border-radius: 50%;
+    background-color: white;
+    z-index: 3;
 }
 .firstrow div{
-    font-size: 80px;
+    font-size: 70px;
     font-weight: 100;
 }
 .firstrow .nine {
@@ -277,26 +274,26 @@ body{
         transform: rotate(1turn);
     }
 }
-@media (max-width: 485px){
+@media (max-width : 723px) {
     .firstrow div{
-        font-size: 60px;
+        font-size: 50px;
     }
     .firstrow {
-        height: 400px;
-        width: 400px;
-    }
-    .landing .container a {
-        padding: 8px;
-        margin-bottom: 8px;
+        height: 375px;
+        width: 375px;
     }
 }
-@media (max-width: 415px){
+@media (max-width : 577px) {
     .firstrow div{
-        font-size: 45px;
+        font-size: 40px;
     }
     .firstrow {
-        height: 350px;
-        width: 350px;
+        height: 325px;
+        width: 325px;
+    }
+    .landing .container a {
+        padding: 5px;
+        margin-bottom: 5px;
     }
     @keyframes ten {
         0%{
@@ -339,31 +336,23 @@ body{
         }
     }
 }
-@media (max-width : 350px){
-    .firstrow {
-        height: 300px;
-        width: 300px;
-    }
-    .landing .container a {
-        padding: 8px;
-        width: 125px;
-        margin-bottom: 8px;
-    }
-}
 /*secondrow*/
 .secondrowcont{
     position: absolute;
+    background-color: white;
+    border-radius: 50%;
 }
 .secondrow {
     width: 750px;
     height: 750px;
     position: relative;
-    border: 10px double black;
     border-radius: 50%;
+    overflow: hidden;
+    background-color: transparent;
     animation: rotate 20s 4s linear infinite forwards , paddingdec 2s forwards;
 }
 .secondrow div {
-    font-size: 100px ;
+    font-size: 85px ;
     font-weight: 200;
     position: absolute;
 }
@@ -437,7 +426,7 @@ body{
     }
     100%{
         top: 50%;
-        left: 0;
+        left: 15px;
     }
 }
 @keyframes secondthree {
@@ -446,7 +435,7 @@ body{
     }
     100%{
         bottom: 50%;
-        right: 0;
+        right: 25px;
     }
 }
 @keyframes secondeleven {
@@ -466,7 +455,7 @@ body{
     }
     100%{
         top: 120px;
-        left: 7%;
+        left: 8%;
     }
 }
 @keyframes secondone {
@@ -556,5 +545,153 @@ body{
     }
     100%{
         transform: translate(0,50%) rotate(-1turn);
+    }
+}
+@media (max-width: 773px) {
+    .secondrow {
+        width: 700px;
+        height: 700px;
+    }
+    .secondrow div {
+        font-size: 77px ;
+        font-weight: 200;
+    }
+    @keyframes secondthree {
+        0%{
+            right: -600px;
+        }
+        100%{
+            bottom: 50%;
+            right: 15px;
+        }
+    }
+    @keyframes secondsix {
+        0%{
+            bottom: -600px;
+            left: 50%;
+        }
+        100%{
+            bottom: 0px;
+            left: 50%;
+        }
+    }
+    @keyframes secondtwelve {
+        0%{
+            top: -200px;
+        }
+        100%{
+            top: 0px;
+            left: 50%;
+        }
+    }
+}
+@media (max-width: 723px) {
+    .secondrow {
+        width: 550px;
+        height: 550px;
+    }
+    .secondrow div {
+        font-size: 60px ;
+        font-weight: 200;
+    }
+    @keyframes secondeight {
+        0%{
+            left: -600px;
+            bottom: -200px;
+        }
+        100%{
+            bottom: 140px;
+            left: 5%;
+        }
+    }
+    @keyframes secondfour {
+        0%{
+            right: -600px;
+            bottom: -200px;
+        }
+        100%{
+            bottom: 140px;
+            right: 5%;
+        }
+    }
+    @keyframes secondseven {
+        0%{
+            left: -600px;
+            bottom: -200px;
+        }
+        100%{
+            bottom: 30px;
+            left: 20%;
+        }
+    }
+}
+@media (max-width : 577px) {
+    .secondrow {
+        width: 475px;
+        height: 475px;
+    }
+    .secondrow div {
+        font-size: 50px ;
+        font-weight: 200;
+    }
+    @keyframes secondeleven {
+        0%{
+            left: -600px;
+            top: -200px;
+        }
+        100%{
+            top: 30px;
+            left: 111px;
+        }
+    }
+    @keyframes secondten {
+        0%{
+            left: -600px;
+            top: -200px;
+        }
+        100%{
+            top: 100px;
+            left: 8%;
+        }
+    }
+    @keyframes secondtwo {
+        0%{
+            right: -600px;
+            top: -200px;
+        }
+        100%{
+            top: 100px;
+            right: 8%;
+        }
+    }
+    @keyframes secondseven {
+        0%{
+            left: -600px;
+            bottom: -200px;
+        }
+        100%{
+            bottom: 30px;
+            left: 111px;
+        }
+    }
+    @keyframes secondeight {
+        0%{
+            left: -600px;
+            bottom: -200px;
+        }
+        100%{
+            bottom: 100px;
+            left: 8%;
+        }
+    }
+    @keyframes secondfour {
+        0%{
+            right: -600px;
+            bottom: -200px;
+        }
+        100%{
+            bottom: 100px;
+            right: 8%;
+        }
     }
 }
